--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=spring-ai-intro
 
 #Pass API key as environment variable, e.g. -DOPENAI_API_KEY=your-api-key
 spring.ai.openai.api-key=${OPENAI_API_KEY}
+
+# enable colour output in console
+spring.output.ansi.enabled=always
